<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.edu.cetis108.cetis1084av_app002.MainActivity"
    android:weightSum="1"
    android:background="@color/common_google_signin_btn_text_dark_pressed">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText1"
        android:ems="10"
        android:layout_marginTop="2dp"
        android:id="@+id/editText"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/editText2"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/editText3" />

    <TextView
        android:text="@string/txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="0.08"
        android:layout_marginTop="24dp"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@android:color/holo_green_dark" />

    <Button
        android:text="@string/btnSuma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp"
        android:layout_marginTop="25dp"/>

    <Button
        android:text="@string/btnResta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/button10"
        android:textSize="16sp"
        android:layout_weight="0.05"
        android:textStyle="normal|bold"
        android:backgroundTint="?attr/colorButtonNormal"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/btnMult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/button11"
        android:textSize="16sp"
        android:layout_weight="0.07"
        android:textStyle="normal|bold"
        android:backgroundTint="?attr/colorButtonNormal"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/button12"
        android:textSize="16sp"
        android:layout_weight="0.05"
        android:textStyle="normal|bold"
        android:backgroundTint="?android:attr/colorButtonNormal"
        android:textAlignment="center"
        android:textColor="@android:color/black" />
</LinearLayout>
